	* includes DHT traffic in the rate limiter
	* added support for bitcomet padding files
	* improved support for sparse files on windows
	* added ability to give seeding torrents preference to active slots
	* added torrent_status::finished_time
	* automatically caps files and connections by default to rlimit
	* added session::is_dht_running() function
	* added torrent_handle::force_dht_announce()

release 0.14.8

	* ignore unkown metadata messages
	* fixed typo that would sometimes prevent queued torrents to be checked

release 0.14.7

	* fixed deadlock in natpmp
	* resume data alerts are always posted, regardless of alert mask
	* added wait_for_alert to python binding
	* improved invalid filename character replacement
	* improved forward compatibility in DHT
	* added set_piece_hashes that takes a callback to the python binding
	* fixed division by zero in get_peer_info()
	* fixed bug where pieces may have been requested before the metadata
	  was received
	* fixed incorrect error when deleting files from a torrent where
	  not all files have been created
	* announces torrents immediately to the DHT when it's started
	* fixed bug in add_files that would fail to recurse if the path
	  ended with a /
	* fixed bug in error handling when parsing torrent files
	* fixed file checking bug when renaming a file before checking the torrent
	* fixed race conditon when receiving metadata from swarm
	* fixed assert in ut_metadata plugin
	* back-ported some fixes for building with no exceptions
	* fixed create_torrent when passing in a path ending with /
	* fixed move_storage when source doesn't exist
	* fixed DHT state save bug for node-id
	* fixed typo in python binding session_status struct
	* broadcast sockets now join every network interface (used for UPnP and
	  local peer discovery)

release 0.14.6

	* various missing include fixes to be buildable with boost 1.40
	* added missing functions to python binding related to torrent creation